<resources>
    <string name="app_name">QR Code Scanner</string>
    <string name="scan_btn">Scan QR Code</string>
    <string name="no_qr_code_found">No QR Code Found</string>
    <string name="copy">Copy</string>
    <string name="okay">Okay</string>
    <string name="open">Open</string>
    <string name="scan_completed">Scan Completed</string>
    <string name="copy_result_to_clipboard">Copy result to clipboard?</string>
    <string name="camera_denied">Error: Camera permission denied</string>
    <string name="generate_qr_code">Generate QR Code</string>
    <string name="qr_input">Enter some text to generate QR Code</string>
    <string name="qr_code">qr_code</string>
    <string name="enter_your_info">Enter your info</string>
    <string name="open_link">Open link embedded in QR Code?</string>
</resources>